paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_4b/sample_004/target.compile.log
error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_4b/sample_004/target.rs:18:5
   |
18 | /     unsafe {
19 | |         let addr = p.as_ptr() as usize;
20 | |         H ^= (addr as u64).wrapping_add(0x9e3779b97f4a7c15u64);
21 | |         H = H.wrapping_mul(0x5851f42d4c957f2d);
22 | |     }
   | |_____^
   |
   = note: requested on the command line with `-F unsafe-code`

error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_4b/sample_004/target.rs:34:17
   |
34 |           let v = unsafe {
   |  _________________^
35 | |             std::slice::from_raw_parts_mut(slice.as_mut_ptr() as *mut f32, n as usize)
36 | |         };
   | |_________^

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_4b/sample_004/target.rs:10:26
   |
10 |         return Some(&mut POOL[OFF..OFF]);
   |                          ^^^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_4b/sample_004/target.rs:10:31
   |
10 |         return Some(&mut POOL[OFF..OFF]);
   |                               ^^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_4b/sample_004/target.rs:10:36
   |
10 |         return Some(&mut POOL[OFF..OFF]);
   |                                    ^^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_4b/sample_004/target.rs:12:8
   |
12 |     if OFF + n > 8192 {
   |        ^^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_4b/sample_004/target.rs:15:17
   |
15 |     let start = OFF;
   |                 ^^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_4b/sample_004/target.rs:16:5
   |
16 |     OFF += n;
   |     ^^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_4b/sample_004/target.rs:17:18
   |
17 |     let p = &mut POOL[start..OFF];
   |                  ^^^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_4b/sample_004/target.rs:17:30
   |
17 |     let p = &mut POOL[start..OFF];
   |                              ^^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/restrict_def_4b/sample_004/target.rs:82:9
   |
82 |     if (H & 1) == 0 {
   |         ^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0133`.